# matam-ex1

./: .gitignore  CMakeLists.txt  Makefile  Makefile.itai  csl3_build.sh  date.c  event.c  event.h  event_manager.c  event_manager.h  makefile  member.c  member.h  priority_queue.c  priority_queue_old.c
dry/: dry.c  dry.lyx  dry.lyx~  dry_fixed.c
tests/: date_tests.c  date_tests.txt  event_manager_tests.c  event_manager_tests.txt  priority_queue_tests.c
